--- a/templates/pages/arrow.html.twig
+++ b/templates/pages/arrow.html.twig
@@ -1,9 +1,42 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class                = "jumbotron text-center">
-    <h1>Suivi de l'étude</h1>
-</div>
+    <div class=container">
+        <div class="row d-flex mt-4 mb-4">
+            <div class="d-flex justify-content-start">
+                <div class="col-md-8">
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="N° d'étude">
+                </div>
+                <div class="col-md-8">
+                    <button class="btn btn-secondary ">Trier par</button>
+                </div>
+            </div>
+            <div class="d-flex justify-content-end">
+                <div class="col-md-8">
+                    <button class="btn btn-secondary ">Gestionnaire formulaire</button>
+                </div>
+                <div class="col-md">
+                    <button class="btn btn-secondary ">Planning</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class= "container jumbotron d-flex justify-content-between">
+        <div class="row md-6 d-flex flex-column justify-content-lg-start mt-2">
+            <div class="col-sm-12">
+                <p>Sponsor: </p>
+                <p>Représentant sponsor: </p>
+                <p>DE: </p>
+            </div>
+        </div>
+        <div class="row md-6 d-flex flex-column justify-content-lg-start mt-2">
+            <div class="col-sm-12">
+                <p>Phase(test): </p>
+                <p>TRE: </p>
+                <p>Espèce: </p>
+            </div>
+        </div>
+    </div>
 <div class                = "container">
     <div class            = "wrapper">
     <div class            = "arrow-steps clearfix">
@@ -12,13 +45,7 @@
             <div class    = "step"> <span>Groupes+temps</span> </div>
             <div class    = "step"> <span>Caractéristiques du prélèvement</span> </div>
             <div class    = "step"> <span>Récapitualif</span> </div>
-    </div>
-            <div class    = "nav clearfix mt-4">
-            <button class="btn btn-primary mr-1">{{ button|default('Previous') }}</button>
-            <button class="btn btn-primary ">{{ button|default('Next') }}</button>
-            
-            </div>
-    </div>
+
 </div>
 {% endblock %}
 
