--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,8 +12,8 @@
     {% endif %}
     <form action="{{ path('login') }}" method="post">
         <div class="form-group">
-            <label for="username">nom d'utilisateur</label>
-            <input type="text" id="usernamee" name="_username" class="form-control" value="{{ last_username }}">
+            <label for="username">Login</label>
+            <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}">
         </div>
 
         <div class="form-group">
@@ -21,7 +21,36 @@
             <input type="password" id="password" name="_password" class="form-control">
         </div>
 
-        <button type="submit" class="btn btn-primary">Se connecter</button>
+
+        <button type="submit" class="btn btn-primary">Sign in</button>
+        {#<a href="{{ path('admin.etude.new') }}" class="btn btn-secondary">Ajouter une nouvelle étude</a>#}
     </form>
-    </div>
+</div>
+
+    {#<div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-md-offset-4">
+                    <h1 class="text-center login-title">Suivi des échantillons</h1>
+                    <div class="account-wall">
+                        <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                             alt="">
+                        <form class="form-signin">
+
+                            <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}" placeholder="Login" required autofocus>
+
+                            <input type="password" id="password" name="_password" class="form-control" placeholder="Password" required>
+                            <a href="{{ path('formulaire') }}" class="btn btn-lg btn-primary btn-block mt-2" type="submit">Entrez</a>
+                            <button class="btn btn-lg btn-primary btn-block mt-2" type="submit">
+                                Sign in</button>
+                            <label class="checkbox pull-left">
+                                <input type="checkbox" value="remember-me">
+                                Remember me
+                            </label>
+
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>#}
 {% endblock %}
