--- a/templates/pages/arrow.html.twig
+++ b/templates/pages/arrow.html.twig
@@ -45,7 +45,7 @@
             <div class    = "step"> <span>Groupes+temps</span> </div>
             <div class    = "step"> <span>Caractéristiques du prélèvement</span> </div>
             <div class    = "step"> <span>Récapitualif</span> </div>
-
+    </div>
 </div>
 {% endblock %}
 
