--- a/templates/admin/etude/_form.html.twig
+++ b/templates/admin/etude/_form.html.twig
@@ -3,6 +3,13 @@
         <div class="col-md-4">{{ form_row(form.numero ) }}</div>
             <div class="col-md-4">{{ form_row(form.sponsor) }}</div>
             <div class="col-md-4">{{ form_row(form.test) }}</div>
+            <div class="col-md-4">{{ form_row(form.DE) }}</div>
+            <div class="col-md-4">{{ form_row(form.representantSponsor) }}</div>
+        <div class="col-md-4">{{ form_row(form.commercial) }}</div>
+        <div class="col-md-4">{{ form_row(form.tre) }}</div>
+        <div class="col-md-4">{{ form_row(form.espece) }}</div>
+        <div class="col-md-4">{{ form_row(form.statut) }}</div>
+
         </div>         
         {{ form_rest(form) }}   
         <button class="btn btn-primary">{{ button|default('Enregistrer') }}</button>       
