--- a/templates/admin/produit/_form.html.twig
+++ b/templates/admin/produit/_form.html.twig
@@ -1,13 +1,9 @@
-
-{% block body %}
-
-    <div class="container">
-        {% include 'pages/arrow.html.twig' %}
-    </div>
+{#{% extends "base.html.twig" %}#}
+{#{{ form_start(form) }}
     <table class="table table-striped table-light mt-4 border border-secondary-rounded text-center">
         <thead>
         <tr>
-
+            {#<th scope="row"><input type="checkbox" aria-label="Checkbox for following text input"></th>#}{#
             <th><button class="btn btn-dark btn-md btn-block ">Groupes</button></th>
             <th><button class="btn btn-dark btn-md btn-block">Id Substance</button></th>
             <th><button class="btn btn-dark btn-md btn-block">Nb test item</button></th>
@@ -17,25 +13,6 @@
         </tr>
         </thead>
         <tbody>
-
-
-
-        <div class="container">
-            <div class="row flex">
-                {% for produit in produits %}
-                    <tr>
-                        <th scope="row"><input type="checkbox" aria-label="Checkbox for following text input"></th>
-                        <td>{{ produit.groupe }}</td>
-                        <td></td>
-                        <td>{{ produit.nbrAnimaux }}</td>
-                        <td>{{ produit.voieAdmin }}</td>
-                        <td>{{ produit.datePremierPrelevement |date('Y-m-d') }}</td>
-                    </tr>
-                {% endfor %}
-            </div>
-        </div>
-
-
         <tr>
 
             <td><input type="text" class="form-control" id="formGroupExampleInput" placeholder="Groupes"></td>
@@ -47,19 +24,16 @@
             <td></td>
             <td></td>
         </tr>
-
+        <div class="row">
+            <div class="col-md-4">{{ form_row(form.groupe ) }}</div>
+            <div class="col-md-4">{{ form_row(form.nbrAnimaux) }}</div>
+            <div class="col-md-4">{{ form_row(form.voieAdmin) }}</div>
+            <div class="col-md-4">{{ form_row(form.datePremierPrelevement) }}</div>
+        </div>
         </tbody>
     </table>
 
 
-    <div class="container d-flex mt-5">
-        <button class="btn btn-light mr-1">Tout</button>
-        <button class="btn btn-light mr-1">Aucun</button>
-        <a href="#" class="btn btn-primary">Suivant</a>
-        <a href="#" class="btn btn-primary">Nouveau groupe</a>
-       {#<a href="{{  path('admin.produit.edit', {id: produit.id}) }}" class="btn btn-primary">Nouveau groupe</a>#}
-
-    </div>
-    {{ include ('admin/produit/_form.html.twig', {button: 'Créer'}) }}
-
-{% endblock %}
+<button class="btn btn-primary">{{ button|default('Enregistrer') }}</button>
+{{ form_end(form) }}
+#}
